--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
     "mocha": "^3.2.0",
+    "style-loader": "^0.13.1",
     "supertest": "^2.0.1"
   }
 }
