--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,13 +1,13 @@
 {
   "development": {
-    "username": "Ambar",
+    "username": "crazykiwi",
     "password": null,
     "database": "one-table",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "Ambar",
+    "username": "cr",
     "password": null,
     "database": "one-table",
     "host": "127.0.0.1",
