--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "*",
     "express": "*",
     "jquery": "^3.1.1",
