--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm test & webpack --watch & nodemon server.js",
+    "start": "webpack --watch & nodemon server.js",
     "test": "mocha --watch"
   },
   "keywords": [],
@@ -30,5 +30,10 @@
     "sequelize-cli": "*",
     "supertest": "^2.0.1",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
   }
 }
