--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "*",
     "jquery": "^3.1.1",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
     "pg": "*",
     "pg-hstore": "*",
     "react": "^15.4.1",
