--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "*",
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "express": "*",
     "jquery": "^3.1.1",
     "mocha": "^3.2.0",
