--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "pg-hstore": "*",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
     "sequelize": "*",
     "sequelize-cli": "*",
     "supertest": "^2.0.1",
