--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "express": "*",
+    "express-session": "^1.14.2",
     "jquery": "^3.1.1",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
