--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^3.0.0",
     "react-thunk": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "sequelize": "*",
     "sequelize-cli": "*",
